# openrec

./: .gitignore  Cargo.toml
shaders/: blur.wgsl  motion_blur.wgsl  shadow.wgsl  zoom.wgsl
src/: app.rs  config.rs  hotkeys.rs  main.rs  tray.rs
src/camera/: mod.rs
src/capture/: audio.rs  cursor.rs  mod.rs  pipeline.rs  pipewire_capture.rs  portal.rs
src/editor/: annotations.rs  history.rs  mod.rs  preview.rs  speed.rs  state.rs  timeline.rs  zoom.rs
src/effects/: mod.rs  shader_pipeline.rs
src/export/: ffmpeg.rs  gif.rs  mod.rs  renderer.rs
src/project/: mod.rs  persistence.rs
src/ui/: editor_window.rs  mod.rs  recorder_hud.rs
